# spotify-web-downloader

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  spotify_aac_downloader.py
docker/: Dockerfile
docker/downloads/: .placeholder.txt
pywidevine/L3/decrypt/: wvdecryptcustom.py
spotify_aac_downloader/: __init__.py  __main__.py  cli.py  constants.py  dl.py  downloader.py  spotify_aac_downloader.py
spotify_web_downloader/: app.py  cli.py  constants.py  downloader.py  downloader_episode.py  downloader_music_video.py  downloader_song.py  enums.py  hardcoded_wvd.py  models.py  spotify_api.py  utils.py
