[project]
name = "spotify-aac-downloader"
description = "Download songs/albums/playlists directly from Spotify in AAC"
requires-python = ">=3.7"
authors = [{ name = "glomatico" }]
dependencies = ["click", "pybase62", "pywidevine", "pyyaml", "yt-dlp"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/glomatico/spotify-aac-downloader"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
spotify-aac-downloader = "spotify_aac_downloader.cli:main"
