[project]
name = "spotify-web-downloader"
description = "A Python CLI app for downloading songs and music videos directly from Spotify."
requires-python = ">=3.8"
authors = [{ name = "glomatico" }]
dependencies = ["click", "pybase62", "pywidevine", "pyyaml", "yt-dlp"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/glomatico/spotify-web-downloader"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
spotify-web-downloader = "spotify_web_downloader.cli:main"
